# btd_launcher

./: .gitignore  cfg.json  index.html  package-lock.json  package.json  patcher_window.html  tsconfig.json  vite.config.ts  vite.config.ts.timestamp-1694182355967-412b03c197998.mjs  vite.config.ts.timestamp-1702014667244-30df3c09c5f07.mjs
BTD_Launcher-cache/part2/: output-info.ini
cfg/: test.db  test_start.bat
cfg/auth/: btd-main-25fe7725174f.json  client_secret_59722361664-ptmtbg21sef4fvpffk7djnt5ogd4rf2s.apps.googleusercontent.com.json  tokencashe.json
cfg/locale/: ru.json
cfg/patcher/: banks_types.json  hill_fort.xml  lights.json  new_buildings_types.json  shrines.xml  statics.xml  templates.json  test_quest.xml  town_specs.json  town_types.json  win_condition_quests.xml
cfg/patcher/adds/: Default.xdb
cfg/patcher/adds/outcast/: Summon_Creatures.xdb
cfg/patcher/adds/win_conditions/: capture_object_desc.txt  capture_object_name.txt  economic_desc.txt  economic_name.txt  final_battle_desc.txt  final_battle_name.txt
cfg/update/: drive_folders.json  local.db
src/: Actions.tsx  App.css  App.tsx  Desc.tsx  Donate.tsx  back.tsx  styles.css
src-tauri/: Cargo.toml  btd-launcher-3c0fe5676989.json  btd-project-393522-a78d6c7b8daa.json  tauri.conf.json  test.txt  tokencashe.json
src-tauri/homm5_types/: Cargo.toml
src-tauri/homm5_types/src/: lib.rs
src-tauri/homm5_types/src/building/: mod.rs
src-tauri/homm5_types/src/creature/: mod.rs
src-tauri/homm5_types/src/town/: mod.rs
src-tauri/patcher/: Cargo.toml
src-tauri/patcher/patcher_macro/: Cargo.toml
src-tauri/patcher/patcher_macro/patcher_macro_derive/: Cargo.toml
src-tauri/patcher/src/: lib.rs
src-tauri/patcher/src/map/: mod.rs  template.rs
src-tauri/patcher/src/patch_strategy/: mod.rs
src-tauri/patcher/src/patch_strategy/base/: mod.rs
src-tauri/patcher/src/patch_strategy/building/: getters.rs  mod.rs  modifiers.rs
src-tauri/patcher/src/patch_strategy/creature/: mod.rs  modifiers.rs
src-tauri/patcher/src/patch_strategy/light/: mod.rs
src-tauri/patcher/src/patch_strategy/mechanics/: mod.rs
src-tauri/patcher/src/patch_strategy/misc/: mod.rs
src-tauri/patcher/src/patch_strategy/modes/: capture.rs  economic.rs  final_battle.rs  mod.rs  outcast.rs
src-tauri/patcher/src/patch_strategy/objects/: mod.rs
src-tauri/patcher/src/patch_strategy/player/: mod.rs  modifiers.rs
src-tauri/patcher/src/patch_strategy/quest/: mod.rs  modifiers.rs
src-tauri/patcher/src/patch_strategy/terrain/: mod.rs
src-tauri/patcher/src/patch_strategy/town/: getters.rs  mod.rs  modifiers.rs  town_scheme.rs
src-tauri/patcher/src/patch_strategy/treasure/: getters.rs  mod.rs  modifiers.rs
src-tauri/patcher/src/patch_strategy/win_condition/: capture.rs  economic.rs  final_battle.rs  mod.rs
src-tauri/scaner/: Cargo.toml
src-tauri/src/: locales.json  main.rs
src-tauri/src/database/: mod.rs
src-tauri/src/drive/: mod.rs
src-tauri/src/file_management/: mod.rs
src-tauri/src/game_mode/: mod.rs
src-tauri/src/patch_management/: mod.rs
src-tauri/src/scan_management/: mod.rs
src-tauri/src/startup/: mod.rs
src-tauri/src/text/: mod.rs
src-tauri/src/update_manager/: mod.rs
src/components/: ModeSwitcher.tsx
src/contexts/: AppState.tsx  GameMode.tsx
src/hooks/: useLocalStorage.ts
src/patcher/: main.tsx  patcher.tsx
src/patcher/components/: main.tsx  main_container.tsx  map_mode.tsx
src/patcher/components/settings/: capture.tsx  economic.tsx  final_battle.tsx  main.tsx
src/patcher/components/team_selector/: main.tsx
src/patcher/contexts/: map_mode.tsx  patch_state.tsx  state.tsx
src/patcher/settings/: capture.tsx  economic.tsx  final_battle.tsx  main.tsx
src/updater/: Updater.tsx
