[package]
name = "btd_launcher"
version = "0.0.1"
description = "BTD project: Game Launcher"
authors = ["pegn0ly"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.3", features = [] }

[dependencies]
tauri = { version = "1.3", features = ["dialog", "shell-open", "window-hide", "window-show", "window-start-dragging"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strum = "0.25.0"
strum_macros = "0.25"
google-drive3 = "5.0.2"
yup-oauth2 = "8.3.0"
reqwest = "0.11.18"
tokio = "1.29.1"
chrono = "0.4.26"
patcher = {path = "../src-tauri/patcher"}
homm5_types = {path = "../src-tauri/homm5_types"}
zip = "0.6.6"
walkdir = "2.3.3"
zip-extensions = "0.6.1"
serde-enum-str = "0.4.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[profile.dev]
opt-level = 0
debug = true
split-debuginfo = '...'  # Platform-specific.
debug-assertions = true
overflow-checks = true
lto = false
panic = 'unwind'
incremental = true
codegen-units = 256
rpath = false
