[package]
name = "patcher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quick-xml = {version = "0.30.0", features = ["serialize", "serde-types"]}
rand = "0.8.5"
serde = {version = "1.0.183", features = ["derive"]}
serde-enum-str = "0.4.0"
serde-xml-rs = "0.6.0"
serde_json = "1.0.104"
strum = "0.25.0"
strum_macros = "0.25.2"
utf16_reader = "0.1.0"
zip = "0.6.6"
pyo3 = "0.19.2"
homm5-types = "0.1.2"